[package]
name = "where_am_i"
version = "0.1.0"
authors = ["Eric Hodel <drbrain@segment7.net>"]
edition = "2018"

[[bin]]
name = "where_am_i"
path = "src/bin/where_am_i.rs"

[dependencies]
argh               = "0.1.0"
assert_approx_eq   = "1.1.0"
bitflags           = "1.2.0"
bytes              = "0.5.0"
chrono             = "0.4.0"
futures            = "0.3.5"
futures-util       = "0.3.5"
libc               = "0.2.0"
nix                = "0.17.0"
nom                = "5.1.0"
serde              = { version = "1.0.0", features = ["derive"] }
serde_json         = "1.0.0"
tempfile           = "3.1.0"
tokio              = { version = "0.2", features = ["full"] }
tokio-serial       = "4.3.0"
tokio-util         = { version = "0.3.0", features = ["full"] }
toml               = "0.5.0"
tracing            = "0.1.0"
tracing-futures    = "0.2.0"
tracing-subscriber = "0.2.0"
volatile           = "0.3.0"

