[package]
name = "where_am_i"
version = "0.1.0"
authors = ["Eric Hodel <drbrain@segment7.net>"]
edition = "2018"

[[bin]]
name = "where_am_i"
path = "src/bin/where_am_i.rs"

[[bin]]
name = "gps_watch"
path = "src/bin/gps_watch.rs"

[[bin]]
name = "time_watch"
path = "src/bin/time_watch.rs"

[dependencies]
assert_approx_eq   = "1.1.0"
anyhow             = "^1.0"
backoff            = { version = "0.3.0", features = ["tokio"] }
bitflags           = "1.3.2"
bytes              = "1.1.0"
chrono             = "0.4.19"
futures            = "0.3.17"
futures-util       = "0.3.17"
instant            = "0.1"
libc               = "0.2.103"
nix                = "0.19.1"
nom                = "^6.1"
serde              = { version = "^1.0", features = ["derive"] }
serde_json         = "^1.0"
tempfile           = "^3.1"
tokio              = { version = "1.12", features = ["full"] }
tokio-serial       = "5.4.1"
tokio-util         = { version = "0.6.8", features = ["full"] }
toml               = "0.5.8"
tracing            = "0.1.22"
tracing-futures    = "0.2.4"
tracing-subscriber = "0.2.15"
volatile           = "0.4.3"

