[package]
name = "where_am_i"
version = "0.1.0"
authors = ["Eric Hodel <drbrain@segment7.net>"]
edition = "2021"

[[bin]]
name = "where_am_i"
path = "src/bin/where_am_i.rs"

[[bin]]
name = "gps_watch"
path = "src/bin/gps_watch.rs"

[[bin]]
name = "precision"
path = "src/bin/precision.rs"

[[bin]]
name = "time_watch"
path = "src/bin/time_watch.rs"

[dependencies]
assert_approx_eq   = "^1.1"
anyhow             = "^1.0"
backoff            = { version = "0.4.0", features = ["tokio"] }
bitflags           = "^1.3"
bytes              = "^1.2"
clap                = { version = "^3.2", features = ["derive"] }
chrono             = "0.4.19"
futures            = "0.3.21"
futures-util       = "0.3.21"
instant            = "0.1.12"
libc               = "0.2.108"
nix                = "0.24.2"
nom                = "^7.0"
serde              = { version = "^1.0", features = ["derive"] }
serde_json         = "^1.0"
tempfile           = "^3.1"
thiserror          = "^1.0"
tokio              = { version = "^1.20", features = ["full"] }
tokio-serial       = "^5.4"
tokio-util         = { version = "0.7.3", features = ["full"] }
tokio-stream       = "0.1.9"
toml               = "0.5.9"
tracing            = "0.1.35"
tracing-futures    = "0.2.5"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
volatile-register  = "0.2.1"

